1. fx-pkg打包功能优化 2. fx-pkg打包macos程序功能通过测试